Added js to query mysql and redshift

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,8 +11,8 @@
 <div class="row">
     <div class="col-md-4">
         {{ wtf.quick_form(form) }}
-        <input class="btn btn-default" id="run" name="run" value="Run">
-        <input class="btn btn-default" id="clear" name="clear" value="Clear">
+        <button class="btn btn-default" id="run">Run</button>
+        <button class="btn btn-default" id="clear">Clear</button>
         <input id="query_time">
         <br><br>
         <div id="results-table"></div>
