--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
         <button class="btn btn-default" id="clear">Clear</button>
         <input id="query_time">
         <br><br>
-        <div id="results-table"></div>
+        <div id="table"></div>
     </div>
 </div>
 {% endblock %}
